fixup! juice: Move to vendor overlay component
 * Add back the biometric sensors list

Change-Id: I6a912803d9fb7802be34e1eba1ccbe7dfd61691c
Signed-off-by: Mesquita <mesquita@aospa.co>

--- a/overlay/JuiceFrameworksOverlay/res/values/config.xml
+++ b/overlay/JuiceFrameworksOverlay/res/values/config.xml
@@ -314,6 +314,14 @@
         <item>455.00</item>
     </array>
 
+    <!-- List of biometric sensors on the device, in decreasing strength. Consumed by AuthService
+         when registering authenticators with BiometricService. Format must be ID:Modality:Strength,
+         where: IDs are unique per device, Modality as defined in BiometricAuthenticator.java,
+         and Strength as defined in Authenticators.java -->
+    <string-array name="config_biometric_sensors" translatable="false" >
+        <item>0:2:15</item>  <!-- ID0:Fingerprint:Strong -->
+    </string-array>
+
     <!-- Array of ambient lux threshold values. This is used for determining hysteresis constraint
          values by calculating the index to use for lookup and then setting the constraint value
          to the corresponding value of the array. The new brightening hysteresis constraint value
